--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -1,18 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <Filter Include="Fichiers sources">
-      <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
-      <Extensions>cpp;c;cc;cxx;c++;cppm;ixx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;h++;hm;inl;inc;ipp;xsd</Extensions>
-    </Filter>
-    <Filter Include="Fichiers de ressources">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Third_party">
       <UniqueIdentifier>{1bf0c041-c195-43ad-837b-805f8d540a7c}</UniqueIdentifier>
     </Filter>
@@ -22,49 +10,49 @@
     <Filter Include="Third_party\lib">
       <UniqueIdentifier>{481ff585-37a6-4cce-9938-7418634872d7}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête\Core">
-      <UniqueIdentifier>{4b471cba-c72d-4f56-9adc-419abdae3902}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête\Core\Debug">
-      <UniqueIdentifier>{79a9872b-8a67-4d2d-b390-a0086d02608a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête\LowRenderer">
-      <UniqueIdentifier>{4d79bbb7-0ff7-42fe-9882-e660db4f2930}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête\Physics">
-      <UniqueIdentifier>{c1197ae7-82e6-493e-b219-ebea62cd389a}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Fichiers d%27en-tête\Resources">
+    <Filter Include="Resources">
       <UniqueIdentifier>{4ad1393d-589a-4e85-b253-41ace8b279ee}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Fichiers d%27en-tête\Core\Math">
+    <Filter Include="LowRenderer">
+      <UniqueIdentifier>{4d79bbb7-0ff7-42fe-9882-e660db4f2930}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Physics">
+      <UniqueIdentifier>{c1197ae7-82e6-493e-b219-ebea62cd389a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Core">
+      <UniqueIdentifier>{4b471cba-c72d-4f56-9adc-419abdae3902}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Core\Debug">
+      <UniqueIdentifier>{79a9872b-8a67-4d2d-b390-a0086d02608a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Core\Math">
       <UniqueIdentifier>{b7024009-802f-4909-b6b6-174a5d2e73cd}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\src\Core\Application\Application.cpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Physics\Transform.cpp">
-      <Filter>Fichiers d%27en-tête\Physics</Filter>
+      <Filter>Physics</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\Texture.cpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\Shader.cpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\Model.cpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="source\src\LowRenderer\Mesh.cpp">
-      <Filter>Fichiers d%27en-tête\LowRenderer</Filter>
+      <Filter>LowRenderer</Filter>
     </ClCompile>
     <ClCompile Include="source\src\LowRenderer\Light.cpp">
-      <Filter>Fichiers d%27en-tête\LowRenderer</Filter>
+      <Filter>LowRenderer</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Core\Debug\Log.cpp">
-      <Filter>Fichiers d%27en-tête\Core\Debug</Filter>
+      <Filter>Core\Debug</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\ImGui\imgui.cpp">
       <Filter>Third_party\impl</Filter>
@@ -88,81 +76,81 @@
       <Filter>Third_party\impl</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\Material.cpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\ResourcesManager.cpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Core\DataStructure\Graph.cpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClCompile>
     <ClCompile Include="source\src\Resources\Scene.cpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClCompile>
     <ClCompile Include="source\src\LowRenderer\Camera.cpp">
-      <Filter>Fichiers d%27en-tête\LowRenderer</Filter>
+      <Filter>LowRenderer</Filter>
     </ClCompile>
     <ClCompile Include="third_party\src\Glad\glad.c">
       <Filter>Third_party</Filter>
     </ClCompile>
     <ClCompile Include="modernOpenGL.cpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\include\Core\Application\Application.hpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="source\include\LowRenderer\Light.hpp">
-      <Filter>Fichiers d%27en-tête\LowRenderer</Filter>
+      <Filter>LowRenderer</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Physics\Transform.hpp">
-      <Filter>Fichiers d%27en-tête\Physics</Filter>
+      <Filter>Physics</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Resources\Material.hpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Resources\ResourcesManager.hpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Core\DataStructure\Component.hpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Resources\Scene.hpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Core\DataStructure\Graph.hpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Resources\Model.hpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Resources\Texture.hpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Resources\Shader.hpp">
-      <Filter>Fichiers d%27en-tête\Resources</Filter>
+      <Filter>Resources</Filter>
     </ClInclude>
     <ClInclude Include="source\include\LowRenderer\Mesh.hpp">
-      <Filter>Fichiers d%27en-tête\LowRenderer</Filter>
+      <Filter>LowRenderer</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Core\Debug\Log.hpp">
-      <Filter>Fichiers d%27en-tête\Core\Debug</Filter>
+      <Filter>Core\Debug</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Core\Debug\Assertion.hpp">
-      <Filter>Fichiers d%27en-tête\Core\Debug</Filter>
+      <Filter>Core\Debug</Filter>
     </ClInclude>
     <ClInclude Include="source\include\LowRenderer\Camera.hpp">
-      <Filter>Fichiers d%27en-tête\LowRenderer</Filter>
+      <Filter>LowRenderer</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Maths\matrix.hpp">
-      <Filter>Fichiers d%27en-tête\Core\Math</Filter>
+      <Filter>Core\Math</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Maths\vectorM.hpp">
-      <Filter>Fichiers d%27en-tête\Core\Math</Filter>
+      <Filter>Core\Math</Filter>
     </ClInclude>
     <ClInclude Include="source\include\Core\Thread\ThreadPool.hpp">
-      <Filter>Fichiers d%27en-tête\Core</Filter>
+      <Filter>Core</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
