--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -72,13 +72,13 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\Core\Application;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Resources;$(SolutionDir)\third_party\include;$(SolutionDir)\third_party\include\ImGui</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\Core\Application;$(SolutionDir)source\include\Core\Thread;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Resources;$(SolutionDir)\third_party\include;$(SolutionDir)\third_party\include\ImGui</IncludePath>
     <LibraryPath>$(SolutionDir)\third_party\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
     <LinkIncremental>
     </LinkIncremental>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\Core\Application;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Resources;$(SolutionDir)\third_party\include;$(SolutionDir)\third_party\include\ImGui</IncludePath>
+    <IncludePath>$(VC_IncludePath);$(WindowsSDK_IncludePath);$(SolutionDir)source;$(SolutionDir)source\include;$(SolutionDir)source\include\Core;$(SolutionDir)source\include\Core\Application;$(SolutionDir)source\include\Core\DataStructure;$(SolutionDir)source\include\Core\Thread;$(SolutionDir)source\include\Core\Debug;$(SolutionDir)source\include\LowRenderer;$(SolutionDir)source\include\Maths;$(SolutionDir)source\include\Physics;$(SolutionDir)source\include\Resources;$(SolutionDir)\third_party\include;$(SolutionDir)\third_party\include\ImGui</IncludePath>
     <LibraryPath>$(SolutionDir)\third_party\libs;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
@@ -181,6 +181,7 @@
     <ClInclude Include="source\include\Maths\matrix.hpp" />
     <ClInclude Include="source\include\Maths\vectorM.hpp" />
     <ClInclude Include="source\include\Physics\Transform.hpp" />
+    <ClInclude Include="source\include\Resources\IResource.hpp" />
     <ClInclude Include="source\include\Resources\Material.hpp" />
     <ClInclude Include="source\include\Resources\Model.hpp" />
     <ClInclude Include="source\include\Resources\ResourcesManager.hpp" />
