--- a/modernOpenGL.vcxproj.filters
+++ b/modernOpenGL.vcxproj.filters
@@ -152,6 +152,9 @@
     <ClInclude Include="source\include\Core\Thread\ThreadPool.hpp">
       <Filter>Core</Filter>
     </ClInclude>
+    <ClInclude Include="source\include\Resources\IResource.hpp">
+      <Filter>Resources</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Library Include="third_party\libs\glfw3dll.lib" />
