--- a/modernOpenGL.vcxproj
+++ b/modernOpenGL.vcxproj
@@ -194,6 +194,9 @@
     <Library Include="third_party\libs\glfw3dll.lib" />
     <Library Include="third_party\libs\glfw3_mt.lib" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
